Update GameMechanics.java
Updated to were pawn promotion is now possible